Další otázka po kliknutí

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body
 
-  onload="prvniOtazka()">
+  onload="napisOtazku()"> 
 
 	<h1>Superkvíz</h1>
 
@@ -20,7 +20,7 @@
 	  <!-- také nezapomenout na <div> pro výsledek a hodnocení -->
 
   <div class="kviz"></div>
-      <ul class="odpovedi" onclick=" dalsiOtazka()"  ></ul>
+      <ul class="odpovedi" onclick=" pokracuj()"  ></ul>
   </div>
 
 	<script src="superkviz.js"></script>
