Vyhodnoceni not working in HTML

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 	  <!-- také nezapomenout na <div> pro výsledek a hodnocení -->
 
   <div class="kviz"></div>
-  </div>
+
+  <div id="tvojehodnoceni"></div>
 
 	<script src="superkviz.js"></script>
 
